--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>My Favorite Recipe</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="recipe.css">
 </head>
 <body>
   <h1>Spam musubi Recipe</h1>
