--- a/Lab03/index.html
+++ b/Lab03/index.html
@@ -21,7 +21,7 @@
     <li>1 teaspoon sesame seeds (optional)</li>
   </ul>
   <div class="recipe-images">
-    <img src="images/top-image.jpg" alt="Top-Image" style="width: 200px; height: 200px;">
+    <img src="images/Top-image.jpg" alt="Top-Image" style="width: 200px; height: 200px;">
     <div>
       <h3>Instructions:</h3>
       <ol>
