Update and rename Index.html to index.html

--- a/Lab03/index.html
+++ b/Lab03/index.html
@@ -21,8 +21,7 @@
     <li>1 teaspoon sesame seeds (optional)</li>
   </ul>
   <div class="recipe-images">
-    <!-- Place the top image here -->
-    <img src="images/top image.jpg" alt="Top Image" style="width: 200px; height: 200px;">
+    <img src="images/Top image.jpg" alt="Top Image" style="width: 200px; height: 200px;">
     <div>
       <h3>Instructions:</h3>
       <ol>
@@ -40,7 +39,6 @@
   <p>Musubi is my favorite recipe because it combines the delicious flavors of crispy Spam, sweet and savory sauce, and
     perfectly seasoned sushi rice. It's a taste of Hawaii that I can't remind me of the times I was a kid on living on
     the island of Oahu.</p>
-  <!-- Place the bottom image here -->
   <img src="images/bottom image.jpg" alt="Bottom Image" style="width: 200px; height: 200px;">
   <p>For more amazing recipes, check out <a href="https://www.favfamilyrecipes.com/musubi/" target="_blank">this
       website</a>.</p>
